--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,78 @@ on:
   pull_request:
     branches: [main, develop]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  NODE_VERSION: '20'
+  PNPM_VERSION: '9.0.0'
+
 jobs:
+  # ============================================================================
+  # LINT & TYPE CHECK (runs in parallel with test)
+  # ============================================================================
+  lint:
+    name: Lint & Type Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        run: pnpm --filter @carecircle/database generate
+
+      - name: Lint
+        run: pnpm lint
+
+      - name: Type Check (packages)
+        run: pnpm --filter "@carecircle/config" --filter "@carecircle/database" --filter "@carecircle/logger" build
+
+  # ============================================================================
+  # SECURITY AUDIT
+  # ============================================================================
+  security:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Security Audit
+        run: pnpm audit --audit-level moderate
+        continue-on-error: true  # Don't fail CI on audit warnings, just report
+
+      - name: Check for known vulnerabilities
+        run: |
+          echo "🔒 Checking for critical vulnerabilities..."
+          pnpm audit --audit-level critical || echo "⚠️ Critical vulnerabilities found - review required"
+
+  # ============================================================================
+  # TEST WITH COVERAGE
+  # ============================================================================
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -19,38 +90,160 @@ jobs:
           POSTGRES_DB: carecircle_test
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       redis:
         image: redis:7-alpine
         ports:
           - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v2
         with:
-          version: 9.0.0
+          version: ${{ env.PNPM_VERSION }}
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'pnpm'
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm test
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Generate Prisma Client
+        run: pnpm --filter @carecircle/database generate
+
+      - name: Push schema to test database
+        run: pnpm --filter @carecircle/database db:push
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/carecircle_test
+
+      - name: Run Tests with Coverage
+        run: pnpm test -- --coverage --coverageReporters=text --coverageReporters=lcov
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/carecircle_test
           REDIS_URL: redis://localhost:6379
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
+          REDIS_TLS: false
+          NODE_ENV: test
+          JWT_SECRET: test_jwt_secret_for_ci_minimum_32_chars
+          JWT_REFRESH_SECRET: test_jwt_refresh_secret_for_ci_32_chars
 
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-report
+          path: coverage/
+          retention-days: 7
+
+  # ============================================================================
+  # BUILD
+  # ============================================================================
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: test
+    needs: [lint, test]
     steps:
       - uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v2
         with:
-          version: 9.0.0
+          version: ${{ env.PNPM_VERSION }}
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'pnpm'
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm build
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build all packages
+        run: pnpm build
+
+      - name: Verify build artifacts
+        run: |
+          echo "✅ Verifying build artifacts..."
+          test -d apps/api/dist || (echo "❌ API build missing" && exit 1)
+          test -d apps/web/.next || (echo "❌ Web build missing" && exit 1)
+          test -d apps/workers/dist || (echo "❌ Workers build missing" && exit 1)
+          echo "✅ All builds verified successfully"
+
+  # ============================================================================
+  # DOCKER BUILD TEST (only on PRs to verify Dockerfiles work)
+  # ============================================================================
+  docker-build:
+    name: Docker Build Test
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    if: github.event_name == 'pull_request'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build API Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/api/Dockerfile
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Web Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/web/Dockerfile
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Workers Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/workers/Dockerfile
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
