fix: Production security hardening and CI/CD pipeline fixes
Security Fixes:
- Disable Swagger in production (enable with ENABLE_SWAGGER=true)
- Add startup validation for JWT secrets (must be 32+ chars in prod)
- Add startup validation for encryption key
- Add ParseUUIDPipe to all controller UUID params
- Add WebSocket authorization for joinFamily/joinCareRecipient
- Strengthen OTP from 6 to 8 digits with attempt limiting
- Add MIME type whitelist for file uploads
- Normalize auth error messages to prevent user enumeration
- Remove sensitive data from logs (tokens, OTPs)
- Add @Public() decorator to health endpoints
- Reduce login rate limit from 10 to 5 per minute

CI/CD Fixes:
- Fix pnpm version inconsistency (standardize to v9)
- Fix JWT secrets to meet 32+ character requirement
- Add ENCRYPTION_KEY to test environment
- Fix Prisma generate command consistency
- Add --passWithNoTests flag for empty test suites
- Fix Dockerfile port mismatches
- Make PR checks more robust with proper error handling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 
 env:
   NODE_VERSION: '20'
-  PNPM_VERSION: '9.0.0'
+  PNPM_VERSION: '9'
 
 jobs:
   # ============================================================================
@@ -142,7 +142,7 @@ jobs:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/carecircle_test
 
       - name: Run Tests with Coverage
-        run: pnpm test -- --coverage --coverageReporters=text --coverageReporters=lcov
+        run: pnpm test -- --coverage --coverageReporters=text --coverageReporters=lcov --passWithNoTests
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/carecircle_test
           REDIS_URL: redis://localhost:6379
@@ -150,8 +150,10 @@ jobs:
           REDIS_PORT: 6379
           REDIS_TLS: false
           NODE_ENV: test
-          JWT_SECRET: test_jwt_secret_for_ci_minimum_32_chars
-          JWT_REFRESH_SECRET: test_jwt_refresh_secret_for_ci_32_chars
+          # CI secrets must be 32+ chars to pass security validation
+          JWT_SECRET: ci-test-jwt-secret-must-be-at-least-32-characters-long
+          JWT_REFRESH_SECRET: ci-test-jwt-refresh-secret-must-be-32-chars-long
+          ENCRYPTION_KEY: 0123456789abcdef0123456789abcdef
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
